# design-patterns

./: README.md  pyproject.toml
01-FactoryMethod/01-apresentacao/: visao-geral.ipynb
01-FactoryMethod/02-exemplo/: README.md  agent-refact.py  agent.py
01-FactoryMethod/03-discussao/: discussao.ipynb
02-Strategy/01-apresentacao/: visao-geral.ipynb
02-Strategy/02-exemplo/: exemplo.ipynb  refactor.ipynb
02-Strategy/03-discussao/: discussao.ipynb
03-Decorator/01-Apresentacao/: visao-geral.ipynb
03-Decorator/02-Exemplo/: exemplo.ipynb
04-Composite/01-apresentacao/: visao_geral.ipynb
04-Composite/02-exemplo/: refac.ipynb  server.ipynb
05-Iterator/01-apresentacao/: visao_geral.ipynb
06-Template/01-apresentacao/: visao_geral.ipynb
06-Template/02-exemplo/: Exemplo.ipynb
06-Template/03-discussao/: discussao.ipynb
07-AbstractFactory/: 01-apresentacao.ipynb
08-Builder/: apresentacao.ipynb
09-Singleton/: apresentacao.ipynb
10-Proxy/: apresentacao.ipynb
11-Adapter/: apresentacao.ipynb
12-Bridge/: apresentacao.ipynb
13-Mediator/: apresentacao.ipynb
14-Observer/: apresentacao.ipynb
15-ChainOfResponsability/: apresentacao.ipynb
16-Memento/: apresentacao.ipynb
17-Command/: apresentacao.ipynb  document.txt
18-Prototype/: apresentacao.ipynb
19-State/: apresentacao.ipynb
20-Visitor/: apresentacao.ipynb
21-Flyweight/: apresentacao.ipynb
22-Interpreter/: apresentacao.ipynb
23-Facade/: apresentacao.ipynb
