[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^5.3.0"
jupyterlab = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 100
ignore = "E203"
